ajout de la feature simulateur de rémunération
WIP

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,4 @@
-file.reference.www-nolarkjs_CROCHARD=.
+file.reference.nolarkjs_CROCHARD-nolarkjs=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.www-nolarkjs_CROCHARD}
-source.folder=${file.reference.www-nolarkjs_CROCHARD}
+site.root.folder=${file.reference.nolarkjs_CROCHARD-nolarkjs}
+source.folder=${file.reference.nolarkjs_CROCHARD-nolarkjs}
